--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   </div>
 </div>
 
-      <main class="col-sm-10 col-sm-offset-2 col-md-10 col-md-offset-1 main">
+      <main class="container-fluid content">
         <h1 class="page-header">My Pizza Profile</h1>
         <div class="row">
           <h2 class="username">Name</h2>
